--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@typescript-eslint/eslint-plugin": "^4.29.1",
         "@typescript-eslint/parser": "^4.29.1",
         "chai": "^4.2.0",
+        "cspell": "^6.6.1",
         "dotenv": "^16.0.0",
         "eslint": "^7.29.0",
         "eslint-config-prettier": "^8.3.0",
