feat: add scpell

--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
         "format": "prettier -w ./",
         "format:check": "prettier --check ./",
         "lint": "eslint --ext .tsx,.ts,.js,.jsx ./",
-        "typecheck": "tsc --noEmit --emitDeclarationOnly false --declaration false"
+        "typecheck": "tsc --noEmit --emitDeclarationOnly false --declaration false",
+        "spellcheck": "cspell **/*.{ts,js,tsx,json} -e **/dist/ -e **/node_modules/ -e /node_modules/"
     },
     "config": {
         "paths": {
