--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,16 +14,16 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: "npm"
+          cache: "yarn"
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Check formatting with Prettier
-        run: npm run format:check
+        run: yarn format:check
 
       - name: Spellcheck (entire repository)
-        run: npm run spellcheck
+        run: yarn spellcheck
 
   typecheck:
     name: Typecheck & linting
@@ -35,17 +35,17 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: "npm"
+          cache: "yarn"
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Lint with ESLint
-        run: npm run lint
+        run: yarn lint
 
       - name: Check Typescript
         run: |
-          npm run typecheck
+          yarn typecheck
 
   test:
     name: Test
@@ -57,7 +57,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: "npm"
+          cache: "yarn"
 
-      - name: Install dependencies and run tests
-        run: npm install-ci-test
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Run tests
+        run: yarn test
